test/applyk1.l1
N = 100000; /* get some gcs in apply call */

applyk(@lambda(M) { for(i = 0; i < M; i++) x = mkstr(1000); return 'okay; },
       @lambda(v) { printf("%a\n", v); },
       @lambda() { printf("fail!\n"); },
       [N]);


applyk(@lambda(M) { for(i = 0; i < M; i++) x = mkstr(1000); error("hi"); },
       @lambda(v) { printf("okay!\n"); },
       @lambda() { printf("fail!\n"); },
       [N]);

